[gd_scene load_steps=39 format=3 uid="uid://dy55bsh72et68"]

[ext_resource type="Script" path="res://scripts/multiplayer/multiplayer_controller.gd" id="1_mntnr"]
[ext_resource type="Script" path="res://scripts/multiplayer/multiplayer input.gd" id="2_t1m0d"]
[ext_resource type="PackedScene" uid="uid://cv3ipj46sh6tq" path="res://scenes/player/hud.tscn" id="3_gd847"]
[ext_resource type="Shader" uid="uid://ba4x50f4o2nba" path="res://shaders/blink.tres" id="4_labob"]
[ext_resource type="Texture2D" uid="uid://jiomi8ggan8j" path="res://assets/sprites/player/player climb.png" id="5_tkelk"]
[ext_resource type="Texture2D" uid="uid://cqyji7ikfp63v" path="res://assets/sprites/player/player idle sheet.png" id="6_aua46"]
[ext_resource type="Texture2D" uid="uid://g8qn0ulsilf0" path="res://assets/sprites/player/player fall.png" id="7_ndvlb"]
[ext_resource type="Texture2D" uid="uid://ba4n0ad8v66jr" path="res://assets/sprites/player/player run sheet.png" id="8_2k6p5"]
[ext_resource type="FontFile" uid="uid://s0bpnvolv2i8" path="res://assets/fonts/PixelOperator8.ttf" id="9_yfqiy"]
[ext_resource type="AudioStream" uid="uid://b35odhysclypl" path="res://assets/sound effects/player/player_hurt.mp3" id="10_n3mw5"]
[ext_resource type="AudioStream" uid="uid://b5j6nu1ge7i78" path="res://assets/sound effects/player/coin_pickup.mp3" id="11_dphtf"]
[ext_resource type="AudioStream" uid="uid://b8rod0c5ue3me" path="res://assets/sound effects/player/tome_pickup.wav" id="12_o1xq7"]
[ext_resource type="AudioStream" uid="uid://bog807tukihob" path="res://assets/sound effects/player/soul_pickup.wav" id="13_ak86l"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_kdq82"]
properties/0/path = NodePath(".:player_id")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:jumped")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:_is_on_floor")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:hor_direction")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:ver_direction")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:username")
properties/6/spawn = true
properties/6/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_201n0"]
properties/0/path = NodePath("InputSynchronizer:input_direction")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("InputSynchronizer:climb_direction")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("InputSynchronizer:username")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1tyvq"]
resource_local_to_scene = true
shader = ExtResource("4_labob")
shader_parameter/enabled = false
shader_parameter/tint = Color(0.92549, 0.152941, 0.247059, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1ct2"]
atlas = ExtResource("5_tkelk")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrchn"]
atlas = ExtResource("6_aua46")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n51au"]
atlas = ExtResource("6_aua46")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sfih"]
atlas = ExtResource("6_aua46")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiicc"]
atlas = ExtResource("6_aua46")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkkjd"]
atlas = ExtResource("6_aua46")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aod2c"]
atlas = ExtResource("6_aua46")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_udxxg"]
atlas = ExtResource("6_aua46")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_adxlb"]
atlas = ExtResource("6_aua46")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ryeq"]
atlas = ExtResource("7_ndvlb")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1jhp"]
atlas = ExtResource("8_2k6p5")
region = Rect2(0, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwwcu"]
atlas = ExtResource("8_2k6p5")
region = Rect2(32, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3my8u"]
atlas = ExtResource("8_2k6p5")
region = Rect2(64, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xhtj"]
atlas = ExtResource("8_2k6p5")
region = Rect2(96, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmpet"]
atlas = ExtResource("8_2k6p5")
region = Rect2(128, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2arq5"]
atlas = ExtResource("8_2k6p5")
region = Rect2(160, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkgd5"]
atlas = ExtResource("8_2k6p5")
region = Rect2(192, 16, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pnaq5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1ct2")
}],
"loop": true,
"name": &"climb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrchn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n51au")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sfih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiicc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkkjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aod2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udxxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adxlb")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ryeq")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1jhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwwcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3my8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xhtj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmpet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2arq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkgd5")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cljip"]
radius = 4.0
height = 16.0

[sub_resource type="Animation" id="Animation_xpmlu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_y5whd"]
resource_name = "player_hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1g6jv"]
_data = {
"RESET": SubResource("Animation_xpmlu"),
"player_hurt": SubResource("Animation_y5whd")
}

[node name="MultiplayerPlayer" type="CharacterBody2D" groups=["players"]]
z_index = 5
collision_layer = 2
collision_mask = 16
script = ExtResource("1_mntnr")

[node name="PlayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_kdq82")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_config = SubResource("SceneReplicationConfig_201n0")
script = ExtResource("2_t1m0d")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = 0
limit_bottom = 0
limit_smoothed = true
position_smoothing_enabled = true

[node name="hud" parent="." instance=ExtResource("3_gd847")]

[node name="Username" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.0
offset_top = -43.0
offset_right = 29.0
offset_bottom = -35.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 0.588235)
theme_override_fonts/font = ExtResource("9_yfqiy")
theme_override_font_sizes/font_size = 8
text = "username"
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_1tyvq")
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_pnaq5")
animation = &"climb"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_cljip")

[node name="SpellSpawn" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_1g6jv")
}

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerHurtAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_n3mw5")
volume_db = -18.0
bus = &"SFX"

[node name="CoinPickupAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_dphtf")
bus = &"SFX"

[node name="TomePickupAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_o1xq7")
volume_db = 5.0
bus = &"SFX"

[node name="SoulPickupAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_ak86l")
volume_db = 5.0
bus = &"SFX"

[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
